--- a/style.css
+++ b/style.css
@@ -230,10 +230,14 @@ section img{
 .section-image-info h1{
     padding-left: 1rem;
 }
+.section-image-info{
+        border-radius: 20px;
+    }
 }
 @media screen and (min-width:1150px){
     #main2{
         width:30% !important ;
     }
+    
 }
 
